@@ -107,7 +107,11 @@ def test_domain_py_xrefs(app, status, warning):
                    'ModTopLevel', 'class')
     assert_refnode(refnodes[6], 'module_b.submodule', 'ModTopLevel',
                    'ModNoModule', 'class')
-    assert len(refnodes) == 7
+    assert_refnode(refnodes[7], False, False, 'int', 'obj')
+    assert_refnode(refnodes[8], False, False, 'tuple', 'obj')
+    assert_refnode(refnodes[9], False, False, 'str', 'obj')
+    assert_refnode(refnodes[10], False, False, 'float', 'obj')
+    assert len(refnodes) == 11
 
 
 @pytest.mark.sphinx('dummy', testroot='domain-py')
